<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">ModulRplus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Inregistrare</string>
    <string name="action_settings2">Resetare(sterge tot)</string>
    
	<string name="crypt_button">Verifica Datele!</string>
    <string name="crypt_text"> </string>
    <string name="rezultat_httpGet"> </string>
    <string name="conectat">Conectat la internet?</string>
    <string name="buton_login">RplusLogin</string>
    <string name="remove_accounts">StergeDateAnterioare</string>
    <string name="parola">Password</string>
    <string name="email">E-Mail</string>
    <color android:id="@+id/color1" name="Alb">#ffffff</color>
    <color android:id="@+id/color1" name="Scris">#00ffff</color>
    <string name="waiting">Va rugam asteptati! Se incarca!</string>
    <string name="content_description_poza">Poza de profil</string>
</resources>
